overflow fixed

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -2,28 +2,22 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 body{
   background-color: black;
   margin: 0px;
   padding: 0px;
+  overflow: hidden;
 }
 
-.interact{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100vh;
-  background-color: white;
-}
+
 .backdrop{
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: white;
   display: flex;
   align-items: center;
@@ -39,21 +33,7 @@ body{
   flex-direction: column;
   align-items: center;
 }
-.loadAnim{
-  width: clamp(50%, 700px, 90%);
-  height: (50%, 300px);
 
-  margin: auto;
-  pad: 0 2rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-h3{
-  position: relative;
-  vertical-align: middle;
-}
 
 /* CSS */
 .button-30 {
